--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -119,7 +119,7 @@ jobs:
         uses: zaproxy/action-full-scan@v0.7.0
         with:
           target: 'http://localhost:5001'
-          cmd_options: '--fail-on-warnings=false -J zap_report.json -r zap_report.html'
+          cmd_options: '-I -J zap_report.json -r zap_report.html'
 
       # Publish ZAP Report to GitHub Pages
       - name: Publish ZAP Report to GitHub Pages
