--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -119,11 +119,21 @@ jobs:
         run: curl -v http://localhost:5001 || exit 1
       
       # Run OWASP ZAP Scan (DAST)
-      - name: Run OWASP ZAP Scan
-        uses: zaproxy/action-full-scan@v0.7.0
-        with:
-          target: 'http://localhost:5001'
-          cmd_options: '-I -J zap_report.json -r zap_report.html'
+      - name: Manually Run ZAP Baseline Scan
+        run: |
+          echo "⚡ Starting ZAP Baseline Scan..."
+          docker run --rm owasp/zap2docker-stable zap-baseline.py \
+            -t http://localhost:5001 \
+            -J zap_report.json \
+            -r zap_report.html \
+            --debug
+      # - name: Run OWASP ZAP Scan
+      #   uses: zaproxy/action-full-scan@v0.7.0
+      #   with:
+      #     target: 'http://localhost:5001'
+      #     cmd_options: '-I -J zap_report.json -r zap_report.html'
+
+
 
       # Publish ZAP Report to GitHub Pages
       - name: Publish ZAP Report to GitHub Pages
