--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -119,28 +119,28 @@ jobs:
       #   run: curl -v hhttp://10.1.0.1:5001 || exit 1
       
       # Run OWASP ZAP Scan (DAST)
-      - name: Get Runner's Internal IP
-        run: echo "RUNNER_IP=$(ip route | awk 'NR==1 {print $3}')" >> $GITHUB_ENV
+      # - name: Get Runner's Internal IP
+      #   run: echo "RUNNER_IP=$(ip route | awk 'NR==1 {print $3}')" >> $GITHUB_ENV
 
-      - name: Manually Run ZAP Baseline Scan
-        run: |
-          # echo "Pulling ZAP Image..."
-          # docker pull ghcr.io/zaproxy/zaproxy:stable
-          # echo "Adjusting permissions..."
-          # mkdir -p $(pwd)/zap-wrk
-          # chmod 777 $(pwd)/zap-wrk
-          # echo "Determined runner's internal IP: $RUNNER_IP"
-          echo "Starting ZAP Baseline Scan..."
-          docker run --rm --network=my_custom_network ghcr.io/zaproxy/zaproxy:stable zap-baseline.py \
-            -t http://flask-app:5001 \
-            -J zap_report.json \
-            -r zap_report.html \
-            - d
-      # - name: Run OWASP ZAP Scan
-      #   uses: zaproxy/action-full-scan@v0.7.0
-      #   with:
-      #     target: 'http://localhost:5001'
-      #     cmd_options: '-I -J zap_report.json -r zap_report.html'
+      # - name: Manually Run ZAP Baseline Scan
+      #   run: |
+      #     # echo "Pulling ZAP Image..."
+      #     # docker pull ghcr.io/zaproxy/zaproxy:stable
+      #     # echo "Adjusting permissions..."
+      #     # mkdir -p $(pwd)/zap-wrk
+      #     # chmod 777 $(pwd)/zap-wrk
+      #     # echo "Determined runner's internal IP: $RUNNER_IP"
+      #     # echo "Starting ZAP Baseline Scan..."
+      #     # docker run --rm --network=my_custom_network ghcr.io/zaproxy/zaproxy:stable zap-baseline.py \
+      #     #   -t http://flask-app:5001 \
+      #     #   -J zap_report.json \
+      #     #   -r zap_report.html \
+      #     #   - d
+      - name: Run OWASP ZAP Scan
+        uses: zaproxy/action-full-scan@v0.7.0
+        with:
+          target: 'http://localhost:5001'
+          cmd_options: '-I -J zap_report.json -r zap_report.html'
 
 
 
