--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -136,11 +136,16 @@ jobs:
       #     #   -J zap_report.json \
       #     #   -r zap_report.html \
       #     #   - d
+      - name: Adjust permissions for ZAP
+        run: |
+          mkdir -p zap_output
+          chmod 777 zap_output  # Give full permissions
+
       - name: Run OWASP ZAP Scan
         uses: zaproxy/action-full-scan@v0.7.0
         with:
           target: 'http://localhost:5001'
-          cmd_options: '-I -J zap_report.json -r zap_report.html'
+          cmd_options: '-I -J zap_output/zap_report.json -r zap_output/zap_report.html'
 
 
 
