--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -147,36 +147,67 @@ jobs:
           target: 'http://localhost:5001'
           cmd_options: '-I -J zap_output/zap_report.json -r zap_output/zap_report.html'
 
+      - name: Debug - List ZAP Output Files
+        run: ls -lah zap_output
+
 
 
       # Publish ZAP Report to GitHub Pages
-      - name: Publish ZAP Report to GitHub Pages
+      - name: Verify and Publish ZAP Reports
         run: |
-          # Check if the report exists
-          if [ ! -f zap_report.html ]; then
-            echo "❌ Error: zap_report.html not found! ZAP scan may have failed."
+          # Debug output directory
+          ls -lah zap_output
+
+          # Check if JSON and HTML reports exist
+          if [ ! -f zap_output/zap_report.json ]; then
+            echo "❌ Error: zap_report.json not found! ZAP scan may have failed."
             exit 1
           fi
 
-          # Rename the report with a timestamp
+          if [ ! -f zap_output/zap_report.html ]; then
+           echo "❌ Error: zap_report.html not found!"
+           exit 1
+          fi
+      
           REPORT_NAME="zap_report_$(date +'%Y%m%d%H%M%S').html"
-          mv zap_report.html $REPORT_NAME
-
-          # Configure Git user for commit
+          mv zap_output/zap_report.html $REPORT_NAME
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-
-          # Fetch the latest changes from gh-pages branch
           git fetch origin
           git checkout gh-pages || git checkout --orphan gh-pages
           git pull --rebase origin gh-pages
 
-          # Push the new report to gh-pages branch
-          echo "Pushing new ZAP report to GitHub Pages..."
           cp $REPORT_NAME index.html
           git add index.html
           git commit -m "Publish ZAP report: $REPORT_NAME (Run ID: $GITHUB_RUN_ID)"
           git push origin gh-pages
+      # - name: Publish ZAP Report to GitHub Pages
+      #   run: |
+      #     # Check if the report exists
+      #     if [ ! -f zap_report.html ]; then
+      #       echo "❌ Error: zap_report.html not found! ZAP scan may have failed."
+      #       exit 1
+      #     fi
+
+      #     # Rename the report with a timestamp
+      #     REPORT_NAME="zap_report_$(date +'%Y%m%d%H%M%S').html"
+      #     mv zap_report.html $REPORT_NAME
+
+      #     # Configure Git user for commit
+      #     git config --global user.name "github-actions"
+      #     git config --global user.email "actions@github.com"
+
+      #     # Fetch the latest changes from gh-pages branch
+      #     git fetch origin
+      #     git checkout gh-pages || git checkout --orphan gh-pages
+      #     git pull --rebase origin gh-pages
+
+      #     # Push the new report to gh-pages branch
+      #     echo "Pushing new ZAP report to GitHub Pages..."
+      #     cp $REPORT_NAME index.html
+      #     git add index.html
+      #     git commit -m "Publish ZAP report: $REPORT_NAME (Run ID: $GITHUB_RUN_ID)"
+      #     git push origin gh-pages
 
 
       # Clean up Flask application container
