--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -179,7 +179,7 @@ jobs:
              echo "# GitHub Pages" > index.html
              git add index.html
             git commit --allow-empty -m "Initial commit for GitHub Pages"
-            git push origin gh-pages
+            git push -f origin gh-pages
           else
             git checkout gh-pages
             git pull --rebase origin gh-pages
