Fix:Gitleaks v8+ requires the github_token

--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -85,6 +85,7 @@ jobs:
       - name: Secrets Scanning with Gitleaks
         uses: zricethezav/gitleaks-action@v2
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           args: --no-git --path=.
                 
       # Run Flask application container
